tests/ui/extenv/extenv-too-many-args.rs
fn main() { env!("one", "two", "three"); } //~ ERROR: `env!()` takes 1 or 2 arguments
